[fix] scrollbar addition

--- a/src/index.css
+++ b/src/index.css
@@ -181,7 +181,10 @@
 
 }
 
-.custom_table_container::-webkit-scrollbar {}
+.custom_table_container::-webkit-scrollbar {
+  display: none;
+
+}
 
 
 
